<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/Resultado"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sal_rio_bruto_rs" />

            <TextView
                android:id="@+id/txtSalarioBrutoResult"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:text="99999" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inss" />

            <TextView
                android:id="@+id/txtInssResult"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:text="99999" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtIRFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IRFF" />

            <TextView
                android:id="@+id/txtIRFFResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtOutros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outros_descontos" />

            <TextView
                android:id="@+id/txtOutrosDescontosResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/txtSalLiq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sal_rio_l_quido" />

            <TextView
                android:id="@+id/txtSalLiqResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtDescontosTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descontos" />

            <TextView
                android:id="@+id/txtDescTotalResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="9999"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/btnFechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/voltar" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>