<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:text="@string/calculadora_de_salario_l_quido"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sal_rio_bruto_rs" />

            <EditText
                android:id="@+id/editSalBruto"
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNumDependentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_de_dependentes" />

            <EditText
                android:id="@+id/editDependentes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtOutros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outros_descontos" />

            <EditText
                android:id="@+id/editOutrosDescontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="130dp"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>